--- a/src/app/components/createevent/createevent.component.html
+++ b/src/app/components/createevent/createevent.component.html
@@ -101,11 +101,11 @@
         <h5>Transaction ID</h5>
       <div class="d-flex flex-row">
         
-          <input formControlName="transactionId" class="form-control" placeholder="Digwas Bellemane" mdbInput mdbValidate>
+          <input formControlName="transactionId" class="form-control" placeholder="" mdbInput mdbValidate>
       </div>
       <h5>Paypal ID</h5>
       <div class="d-flex flex-row">
-        <input formControlName="paypalId" class="form-control" placeholder="Digwas Bellemane" mdbInput mdbValidate>
+        <input formControlName="paypalId" class="form-control" placeholder="" mdbInput mdbValidate>
       </div>
       <div class="d-flex flex-row">
 
