--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="jumbotron jumbotron-fluid text-center pt-0"> -->
 
 
-<div class="container-fluid">
+<div class="container-fluid pt-2">
     
     <div class="row">   
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
